למה הדבר דומה, כמולונז, ליל הסדר אצל אבא ותרצה, האוס

--- a/index.html
+++ b/index.html
@@ -485,6 +485,8 @@ Error message and password prompt
 
 <li>האומנית</li>
 
+<li>האוס</li>
+
 <li>האחיות K</li>
 
 <li>האחיות כהן</li>
@@ -695,6 +697,8 @@ Error message and password prompt
 
 <li>כישורים חברתיים</li>
 
+<li>כמולונז</li>
+
 <li>כרובית במחבת</li>
 
 <li>כריסטופר מולטיסנטי</li>
@@ -726,6 +730,8 @@ Error message and password prompt
 <li>לייף סטייל</li>
 
 <li>ליל הדובונאז'</li>
+
+<li>ליל הסדר אצל אבא ותרצה</li>
 
 <li>לילי</li>
 
@@ -762,6 +768,8 @@ Error message and password prompt
 <li>לילי 16</li>
 
 <li>לילי 17</li>
+
+<li>למה הדבר דומה</li>
 
 <li>לפתן חבושים</li>
 
@@ -8921,7 +8929,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[החיים נועדו למי שלא יכול להתמודד עם סמים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חוה אלברשטיין]] [[למה הדבר דומה]] האוס [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8941,7 +8949,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180412180605092" title="$:/temp/search">
+<div created="20161023184814872" modified="20180429134216710" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10400,14 +10408,14 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170514214551974" modified="20170918124131273" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
+<div created="20170514214551974" modified="20180420222047482" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
 <pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[יויו]]:
 
 נכון, אני גבר פריבילגי, ולא שקל לי לכנות את עצמי גבר, הייתי מעדיף בחור, אך בקרוב מאד ימלאו לי 40.
   
-אינני מתנצל על כך, שאני גבר פריבילגי. אינני חמדן. אני לא בודק מה יש לאחרים.
+אינני מתנצל על כך שאני גבר פריבילגי. אינני חמדן. אני לא בודק מה יש לאחרים.
 
 אולי רק אדם פריבילגי, יכול להרשות לעצמו לא לבדוק מה יש לאחרים, אבל כל אחד יכול לראות את יתרונותיו היחסיים.
 
@@ -11332,6 +11340,19 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
+<div created="20180414181844848" modified="20180416141801334" tags="סדרות מוזיקה" title="האוס">
+<pre>[img[pictures/house.jpg]]
+
+!!![[הצוות]]:
+
+אחרי שבמסגרת המיזם השיקומי של [[וילסון|http://www.imdb.com/name/nm0000494/?ref_=tt_cl_t3]] את [[האוס|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]], משלם וילסון [[לפורמן|http://www.imdb.com/name/nm0004898/?ref_=tt_cl_t2]] [[וצ'ייס|http://www.imdb.com/name/nm0817980/?ref_=tt_cl_t4]] ([[לא רק|https://www.youtube.com/watch?v=Xz3oTbcxFkA]]) בעבור שיצאו איתו לבלות, מגיעה [[סצנת קריוקי בלתי נשכחת|https://www.youtube.com/watch?v=BVGGG2J0_7M]]. עם השיר [[רכבת חצות לג'ורג'יה|https://www.youtube.com/watch?v=MDtAuLwa0ZE]] שהיה להיט ב-1973. זה קורה לקראת סוף העונה השישית, בה האוס, שהכניס עצמו לאשפוז גמילה ושוחרר ממנו, הולך ומשתפר וכך גם התסריט. [[זה|http://www.imdb.com/title/tt0412142/]] נהיה נעים ומצחיק יותר, [[13 הורסת|http://www.imdb.com/name/nm1312575/?ref_=tt_cl_t9]]. עוד לא סיימנו את עונה 6, כלומר יש  הסוף של 6 ועוד שתיים, אבל לפי [[הקליפ הזה|https://www.youtube.com/watch?v=O8pCxcUURaw]] - עוד קצת טוב ונשתגע.
+
+
+
+
+
+</pre>
+</div>
 <div created="20170320161241857" modified="20170729110111786" tags="HH [[שרלה לא הייתה אוהבת את זה]]" title="האחיות K">
 <pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
 
@@ -11368,14 +11389,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20171002200359738" modified="20171007191545156" tags="סדרות" title="האנטומיה של גריי">
+<div created="20171002200359738" modified="20180420221908730" tags="סדרות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
 !!![[יויו]]:
 
 
-כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|http://www.imdb.com/character/ch0021688/?ref_=ttfc_fc_cl_t41]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
-[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|http://www.imdb.com/character/ch0021666/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|http://www.imdb.com/character/ch0021668/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 במשך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
+כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
+[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 במשך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
 </div>
 <div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
@@ -11856,7 +11877,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20180315162507739" modified="20180316204556215" tags="[[אחות כהן]]" title="הצוות">
+<div created="20180315162507739" modified="20180429132858708" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]]" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
 
 הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת חוזה השכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
@@ -12005,10 +12026,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
-<div created="20180328131528706" modified="20180408104854498" tags="[[אחיות חוץ]] מוזיקה" title="חוה אלברשטיין">
+<div created="20180328131528706" modified="20180429134323226" tags="[[אחיות חוץ]] מוזיקה" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
 
-[[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%97%D7%95%D7%95%D7%94.bmp]] התמונה המקורית ממנה גורה ציירה את [[חוה|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%94_%D7%90%D7%9C%D7%91%D7%A8%D7%A9%D7%98%D7%99%D7%99%D7%9F]] שנולדה בשם אווה. היא [[שרה עם גיטרה.|https://www.youtube.com/watch?v=MqBu-lEPKWg]]: 
+[[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%97%D7%95%D7%95%D7%94.bmp]] התמונה המקורית ממנה גורה ציירה את [[חוה|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%94_%D7%90%D7%9C%D7%91%D7%A8%D7%A9%D7%98%D7%99%D7%99%D7%9F]] שנולדה בשם אווה. היא [[שרה עם גיטרה|https://www.youtube.com/watch?v=MqBu-lEPKWg]]: 
 
 //האמנם האמנם
 
@@ -12896,6 +12917,50 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
 </div>
+<div created="20180416185136170" modified="20180429133023650" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]]" title="כמולונז">
+<pre>[img[pictures/cmolonez.jpg]]
+
+!!![[יויו]]:
+
+כמולונז נראה בדיוק כמו [[בולונז|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%98%D7%91_%D7%91%D7%95%D7%9C%D7%95%D7%A0%D7%96]] אבל תרצה, שהיא מאד ספציפית, מכינה אותו עם [[סייטן|https://he.wikipedia.org/wiki/%D7%A1%D7%99%D7%99%D7%98%D7%9F]] קצוץ. בליל הסדר אכלנו את התבשיל מעל אטריות ביצים או אטריות שעועית. ברגיל אנחנו אוכלים את זה על ספגטי. 
+
+החומרים:
+
+*חצי ק&quot;ג סייטן קצוץ
+*שמן זית
+*2 שיני שום חתוכות קטן
+*בצל גדול חתוך לקוביות קטנות
+*פלפל חתוך לקוביות קטנות
+*20 עגבניות שרי תמר
+*שתי עגבניות ג'ני (אמיתי)
+*2 כוסות עגבניות מרוסקות מבקבוק
+*מלח ים גס
+*פלפל שחור
+*ארבעה עלי אורגנו
+*כוס- 2 כוסות מים 
+
+אופן ההכנה:
+
+1. מחממים בסיר רחב (הכי מתאים זה סיר מדגם סוטאז') ארבע כפות שמן זית ומזהיבים את השום
+
+2. מוסיפים את הפלפל החתוך וצולים אותו עד שהוא נהיה מעט שקוף
+
+3. מוסיפים את העגבניות וממשיכים בצליה, מוסיפים קורט מלח גס וממשיכים עוד כמה דקות. עד שמתאדים הנוזלים
+
+4. מוסיפים את הסייטן הקצוץ וצולים אותו כעשר דקות, מידי פעם מערבבים/הופכים בעזרת כף עץ
+
+5. יוצקים מעל חמש כפות שמן זית  וממשיכים לצלות עוד עשר דקות בערך. מידי פעם מערבבים
+
+6. מוסיפים את רסק העגבניות, המים, התבלינים ומערבבים
+
+7. מבשלים שעה בערך על אש קטנה ומכבים את האש
+
+הערה:
+
+לדעתי הטוב ביותר הוא אחרי שמכבים את האש והתבשיל &quot;נח&quot; זמן מה, טועמים, מתקנים תיבול אם צריך ומחממים שוב.
+
+</pre>
+</div>
 <div created="20170621135717036" modified="20180107124257583" tags="[[חיות אוכל]] [[מתכונים טבעוניים]]" title="כרובית במחבת">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
 
@@ -13116,6 +13181,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
+<div created="20180416183422488" modified="20180416185038564" tags="[[משפחת באומן]] ארוחות [[נאמני הגנזך]]" title="ליל הסדר אצל אבא ותרצה">
+<pre>[img[pictures/lel-haseder-ezel-aba.jpg]]
+
+אלפרד נשאר לשמור על הבית. אנג'ליק, אירי, גורה ואני נסענו לשמח את ההורים. נהננו מהאביב היפה והרוח הנעימה. אבא בנה  צריף מאד יפה בחצר. כל המשפחה הגיעה כולל שני בניה של תרצה. היה הרבה מאד אוכל וללא ספק אפשר להגיד שכמות הטבעוניים הולכת וגדולה מה שגרם לתרצה להכין [[כמולונז]] אותו אימצנו.</pre>
+</div>
 <div created="20171219223133813" modified="20180318170818076" tags="[[מטא בדיון]] [[ילדים חד הוריים]] [[סיפורים אמיתיים]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
@@ -13236,6 +13306,24 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 סוף
 
 [img[pictures/lily-17-1.jpg]]
+</pre>
+</div>
+<div created="20180429132711538" modified="20180429133713356" tags="[[חיות אוכל]] [[מתכונים טבעוניים]]" title="למה הדבר דומה">
+<pre>
+[img[pictures/lema-hadavar-dome.jpg]]
+
+!!![[הצוות]]:
+
+יצר האדם קורניבורי מנעוריו. הוא אומנם גילה את האש והסכין, וניביו התקצרו, אך הוא סבל מצנע. הוא עשה עצמו מתעשת, והחליט לרחם על חיות הבר והבית, לפחות חלקים ממנו.
+
+ומה עם העצים? לא כואב להם? והעגבניות? אין להן דם? או לב? או עגבות?
+
+בגעגועיו חלם על [[תחליפים|https://www.youtube.com/watch?v=o8VObwbShjg]]: כמולונז, כמו שניצל, כמונלוני, צ'ילי כמו קארנה, חצילים בטעם כבד, קישואים בטעם כבד, המבורגר פטריות...
+
+ולפטריות? לא כואב?
+
+
+&lt;&lt;list-links filter:&quot;[tag[למה הדבר דומה]]&quot;&gt;&gt;
 </pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
@@ -15135,7 +15223,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20180314180839992" modified="20180316102740248" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות" title="פטה טבעוני">
+<div created="20180314180839992" modified="20180429134207538" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות [[למה הדבר דומה]]" title="פטה טבעוני">
 <pre>[img[pictures/vegan-pate.jpg]]
 
 
