--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -485,6 +485,8 @@ Error message and password prompt
 
 <li>האומנית</li>
 
+<li>האוס</li>
+
 <li>האחיות K</li>
 
 <li>האחיות כהן</li>
@@ -776,6 +778,8 @@ Error message and password prompt
 <li>מאכילים את המצפון</li>
 
 <li>מג'דרה</li>
+
+<li>מגבות מטבח</li>
 
 <li>מדו</li>
 
@@ -8907,10 +8911,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20180325140333624" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20180410152620112" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180408163604916" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180410152846480" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8919,7 +8923,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="ראשל [[האחיות כהן]]" title="$:/StoryList">
+<div list="האוס [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8939,7 +8943,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180410101056480" title="$:/temp/search">
+<div created="20161023184814872" modified="20180412180605092" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10425,7 +10429,7 @@ Is where I want to be
 כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
 </pre>
 </div>
-<div created="20170619141108783" modified="20180130192646571" tags="[[סיפורים אמיתיים]] אמהות" title="גואן אופנה">
+<div created="20170619141108783" modified="20180410113509750" tags="[[סיפורים אמיתיים]] אמהות" title="גואן אופנה">
 <pre>[img[pictures/guen-inn-mitpara.jpg]]
 
 !!![[גואן יין]]:
@@ -10442,7 +10446,7 @@ Is where I want to be
 
 אמי מנהלת את העבודה. אנחנו גוזרות יחדיו, ומעסיקות שלוש נשים. 
 
-הפסקתי לגור איתה רק לפני כמה שנים. לא קל לה עם זה שאני עדיין לא נשואה, ושעדיין אין לי ילדים, אבל הסברתי לה, שהחיים לא קלים.
+הפסקתי לגור איתה רק לפני כמה שנים. לא קל לה עם זה שאני עדיין לא נשואה, ושעדיין אין לי ילדים, אבל הסברתי לה, [[שהחיים לא קלים|החיים נועדו למי שלא יכול להתמודד עם סמים]].
 
 </pre>
 </div>
@@ -11330,6 +11334,10 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
+<div created="20180414181640728" modified="20180414181747022" tags="מוזיקה סדרות" title="האוס">
+<pre>
+[img[pictures/house.jpg]]</pre>
+</div>
 <div created="20170320161241857" modified="20170729110111786" tags="HH [[שרלה לא הייתה אוהבת את זה]]" title="האחיות K">
 <pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
 
@@ -11514,8 +11522,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170225123850883" modified="20170522231753010" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
-<pre>[img[pictures/DR8EdG7xEWfUvOmE.jpg]]
+<div created="20170225123850883" modified="20180412180854912" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
+<pre>[img[pictures/hachaim-noadoo.gif]]
 
 
 !!![[אלפרד]]:
@@ -13351,6 +13359,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 4. מסננים את העדשים, מערבבים אותם לתוך האורז, ממליחים לפי הטעם, ומפזרים מעל את הבצל המטוגן.
 
 </pre>
+</div>
+<div created="20180410150429522" modified="20180410152844192" tags="[[הנחלה בה גדלתי]] [[חיות אוכל]] [[כשהם ישנים]] [[מטא בדיון]]" title="מגבות מטבח">
+<pre>[img[pictures/magavot-mitbach.jpg]]
+
+!!![[אווה]]:
+
+למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן.</pre>
 </div>
 <div created="20170926191733045" modified="20171002140653886" tags="הסופרנוס" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
@@ -15632,7 +15647,7 @@ Fapina''
 
 הם גרים בקיבוץ בערבה והיא מתפרנסת מאריגת שטיחים צבעוניים, על נולים ענקיים, מרצועות טריקו צבעוניות.</pre>
 </div>
-<div created="20170401150113960" modified="20180410101053252" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="ראשל">
+<div created="20170401150113960" modified="20170612152446776" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="ראשל">
 <pre>[img[pictures/rachel.jpg]]
 
 !!![[גורה]]:
