צ'ילי כמו קארנה

--- a/index.html
+++ b/index.html
@@ -979,6 +979,8 @@ Error message and password prompt
 
 <li>פפינה</li>
 
+<li>צ'ילי כמו קארנה</li>
+
 <li>צ'ן</li>
 
 <li>צ'נג</li>
@@ -8920,7 +8922,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180410152620112" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180410152846480" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180430135602500" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8929,7 +8931,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[חוה אלברשטיין]] [[למה הדבר דומה]] האוס [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[למה הדבר דומה]] [[צ'ילי כמו קארנה]] הצוות [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11877,7 +11879,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20180315162507739" modified="20180429132858708" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]]" title="הצוות">
+<div created="20180315162507739" modified="20180430140219026" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]]" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
 
 הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת חוזה השכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
@@ -13309,8 +13311,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 </pre>
 </div>
 <div created="20180429132711538" modified="20180429133713356" tags="[[חיות אוכל]] [[מתכונים טבעוניים]]" title="למה הדבר דומה">
-<pre>
-[img[pictures/lema-hadavar-dome.jpg]]
+<pre>[img[pictures/lema-hadavar-dome.jpg]]
 
 !!![[הצוות]]:
 
@@ -15426,6 +15427,62 @@ Fapina''
 
 
 [img[https://i.imgur.com/xiMpKvk.jpg)]]
+
+
+</pre>
+</div>
+<div created="20180429154850092" modified="20180430140102406" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]]" title="צ'ילי כמו קארנה">
+<pre>[img[pictures/chilli-cmo-karne.jpg]]
+
+!!![[הצוות]]:
+
+
+החומרים:
+
+*שמן תירס
+*שמן חריף
+*בצל גדול קצוץ לקוביות
+*שתי שיני שום קצוצות
+*פלפל אדום חתוך לקוביות קטנות
+*פלפל צהוב חתוך לקוביות
+*שני גזרים מגוררים
+*20 עגבניות שרי תמר חתוכות לפלחים
+*ארבע עגבניות בגודל בינוני מסוג טעים חתוכות לפלחים
+*חצי כוס שעועית חומה מבושלת עד רכות (משרים לפני לפחות 8 שעות)
+*חצי כוס שעועית שחורה מבושלת עד רכות (להשרות לפני לפחות שמונה שעות)
+*חצי קילוגרם כמו בשר טחון
+*שתי כוסות רסק עגבניות מבקבוק
+*כוס-שתי כוסות מים
+*פלפל שחור
+*מלח ים גס
+*כפית סוכר
+*צ'ילי טחון
+*שני עלי זעתר
+*צרור כוסברה קצוץ 
+
+אופן ההכנה:
+
+1. בסיר בקוטר 24 ס&quot;מ מחממים שתי כפות שמן תירס ושתי כפות שמן חריף וצולים את הבצל והשום עד הזהבה
+
+2. מוסיפים את הפלפלים וממשיכים לצלות עד הזהבה
+
+3. מוסיפים את הגזר המגורר וצולים
+
+4. מוסיפים את העגבניות החתוכות וממשיכים לצלות עד שנגמרים הנוזלים בסיר
+
+5. מוסיפים את הכמו בשר טחון וצולים כמה דקות תוך ערבוב בכף עץ
+
+6. מוסיפים את רסק העגבניות וכוס-שתי כוסות מים
+
+7. מערבבים ומוסיפים את התבלינים ומבשלים שעה על אש קטנה. מידי פעם מערבבים בעדינות
+
+8. מכבים את האש. נותנים לצ'ילי להתקרר, טועמים ומתקנים תיבול ומחממים שוב.
+
+9. מפזרים כוסברה קצוצה לפי הטעם ומגישים מעל אורז לבן
+
+
+
+
 
 
 </pre>
