--- a/index.html
+++ b/index.html
@@ -8922,7 +8922,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180410152620112" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180430135602500" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180430154016174" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8931,7 +8931,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[למה הדבר דומה]] [[צ'ילי כמו קארנה]] הצוות [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[החיים נועדו למי שלא יכול להתמודד עם סמים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8951,7 +8951,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180429134216710" title="$:/temp/search">
+<div created="20161023184814872" modified="20180430153954092" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11539,8 +11539,10 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170225123850883" modified="20180412180854912" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
+<div created="20170225123850883" modified="20180430154009988" title="החיים נועדו למי שלא יכול להתמודד עם סמים">
 <pre>[img[pictures/hachaim-noadoo.gif]]
+
+(את הgif עשה [[הדוד|הדוד האמיתי]])
 
 
 !!![[אלפרד]]:
