עוגיות שוקולד צ'יפס

--- a/index.html
+++ b/index.html
@@ -905,6 +905,8 @@ Error message and password prompt
 
 <li>עוגיות קימל</li>
 
+<li>עוגיות שוקולד צ'יפס</li>
+
 <li>עוגת מוקה</li>
 
 <li>עוגת סולת</li>
@@ -8922,7 +8924,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180410152620112" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180430154016174" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180502193038782" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8931,7 +8933,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[החיים נועדו למי שלא יכול להתמודד עם סמים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ליל הסדר אצל אבא ותרצה]] [[אבא יואל]] [[משפחת באומן]] [[עוגיות שוקולד צ'יפס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8951,7 +8953,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180430153954092" title="$:/temp/search">
+<div created="20161023184814872" modified="20180502192530580" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9223,12 +9225,12 @@ well,
     float: right;
 }</pre>
 </div>
-<div created="20170608165812345" modified="20170609063510483" tags="[[משפחת באומן]]" title="אבא יואל">
+<div created="20170608165812345" modified="20180502192555710" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[יויו]]:
 
-אבא יואל באומן, מאז נפטרה [[אימנו|דינה ז&quot;ל]], מגיע בגוש אחד עם רעייתו היקרה - באמת היקרה - תרצה באומן.
+אבא יואל באומן, מאז נפטרה [[אימנו|דינה ז&quot;ל]], מגיע בגוש אחד עם רעייתו היקרה - באמת היקרה - תרצה באומן, שמגיעה עם חיוך רחב ואחלה [[עוגיות שוקולד צ'יפס]].
 
 אני מאד מסמפט את תרצה, שהפכה אותו לאדם נסבל וסובלני הרבה יותר ממה שהיה.
 
@@ -13851,7 +13853,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170608171939614" modified="20170608212601085" title="משפחת באומן">
+<div created="20170608171939614" modified="20180503172352602" tags="[[נאמני הגנזך]] [[סיפורים אמיתיים]]" title="משפחת באומן">
 <pre>[img[pictures/baumans.jpg]]
 
 !!![[יויו]]:
@@ -14379,6 +14381,39 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20180502183518120" modified="20180503152655610" tags="[[משפחת באומן]] [[חיות אוכל]] [[נאמני הגנזך]]" title="עוגיות שוקולד צ'יפס">
+<pre>[img[pictures/chocolate-chips.jpg]]
+
+!!![[יויו וגורה]]:
+
+החיים נתנו לנו מתנה, את [[תרצה|אבא יואל]]. //אוהבים אותך תרצה!//
+
+החומרים:
+
+*200 גרם חמאה קרה חתוכה לקוביות
+*3/4 כוס סוכר לבן
+*1/2 כוס סוכר חום
+*כף סוכר וניל 
+*2 ביצים
+*2 כוסות קמח
+*כפית אבקת אפייה
+*קמצוץ מלח
+*300 גרם שוקולד צ'יפס
+
+אופן ההכנה:
+
+1. במערבל חשמלי עם להב גיטרה  מערבלים עד למשחה חלקה את החמאה והסוכר (חום, לבן ווניל)
+
+2. מוסיפים את הביצים, הקמח, אבקת האפייה והמלח עד שמתקבל כדור בצק אחיד
+
+3. מוציאים את קערת המערבל מהמכשיר, יוצרים גומה ומערבבים לתוכה עם היד את פתיתי השוקולד
+
+4. כשכל הפתיתים נמצאים בתוך הבצק מקררים אותו 20 דקות
+
+5. מחממים תנור ל 170 מעלות צלזיוס, מרפדים שתי תבניות של התנור בנייר אפייה
+
+6. יוצרים כדורים בקוטר של 2-21/2 סינטמטרים, משטחים אותם מעט, מניחים על נייר האפייה במרחק של 1 סנטימטר בערך אחד מהשני ואופים כ-20 דקות</pre>
 </div>
 <div created="20170413101450070" modified="20170413112450089" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
 <pre>[img[pictures/ugat-moka.jpg]]
