--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -697,6 +697,8 @@ Error message and password prompt
 
 <li>כישורים חברתיים</li>
 
+<li>כמולונז</li>
+
 <li>כרובית במחבת</li>
 
 <li>כריסטופר מולטיסנטי</li>
@@ -728,6 +730,8 @@ Error message and password prompt
 <li>לייף סטייל</li>
 
 <li>ליל הדובונאז'</li>
+
+<li>ליל הסדר אצל אבא ותרצה</li>
 
 <li>לילי</li>
 
@@ -764,6 +768,8 @@ Error message and password prompt
 <li>לילי 16</li>
 
 <li>לילי 17</li>
+
+<li>למה הדבר דומה</li>
 
 <li>לפתן חבושים</li>
 
@@ -899,6 +905,8 @@ Error message and password prompt
 
 <li>עוגיות קימל</li>
 
+<li>עוגיות שוקולד צ'יפס</li>
+
 <li>עוגת מוקה</li>
 
 <li>עוגת סולת</li>
@@ -972,6 +980,8 @@ Error message and password prompt
 <li>פעם</li>
 
 <li>פפינה</li>
+
+<li>צ'ילי כמו קארנה</li>
 
 <li>צ'ן</li>
 
@@ -8914,7 +8924,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180410152620112" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20180410152846480" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20180430135602500" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8923,7 +8933,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="האוס [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עוגיות שוקולד צ'יפס]] [[אבא יואל]] [[הנחלה בה גדלתי]] ריחות [[רזיאל ורפאל]] [[עץ המשפחה של אווה]] [[מגבות מטבח]] [[כוכב המשאלות בעל תשע הצלעות]] [[חנה אמנו]] [[המטבח של הנחלה]] איריס אווה [[אהרון אחי השלם]] אדית אבינו סולטנה צזיקי [[צ'ילי כמו קארנה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8943,7 +8953,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180412180605092" title="$:/temp/search">
+<div created="20161023184814872" modified="20180502170403898" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10402,14 +10412,14 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170514214551974" modified="20170918124131273" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
+<div created="20170514214551974" modified="20180420222047482" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]]" title="גבר פריבילגי">
 <pre>[img[pictures/gever-privilegy.jpg]]
 
 !!![[יויו]]:
 
 נכון, אני גבר פריבילגי, ולא שקל לי לכנות את עצמי גבר, הייתי מעדיף בחור, אך בקרוב מאד ימלאו לי 40.
   
-אינני מתנצל על כך, שאני גבר פריבילגי. אינני חמדן. אני לא בודק מה יש לאחרים.
+אינני מתנצל על כך שאני גבר פריבילגי. אינני חמדן. אני לא בודק מה יש לאחרים.
 
 אולי רק אדם פריבילגי, יכול להרשות לעצמו לא לבדוק מה יש לאחרים, אבל כל אחד יכול לראות את יתרונותיו היחסיים.
 
@@ -11334,9 +11344,18 @@ different tastes, but there were things we both love: family, work, people in al
 
 </pre>
 </div>
-<div created="20180414181640728" modified="20180414181747022" tags="מוזיקה סדרות" title="האוס">
-<pre>
-[img[pictures/house.jpg]]</pre>
+<div created="20180414181844848" modified="20180416141801334" tags="סדרות מוזיקה" title="האוס">
+<pre>[img[pictures/house.jpg]]
+
+!!![[הצוות]]:
+
+אחרי שבמסגרת המיזם השיקומי של [[וילסון|http://www.imdb.com/name/nm0000494/?ref_=tt_cl_t3]] את [[האוס|http://www.imdb.com/name/nm0491402/?ref_=tt_cl_t1]], משלם וילסון [[לפורמן|http://www.imdb.com/name/nm0004898/?ref_=tt_cl_t2]] [[וצ'ייס|http://www.imdb.com/name/nm0817980/?ref_=tt_cl_t4]] ([[לא רק|https://www.youtube.com/watch?v=Xz3oTbcxFkA]]) בעבור שיצאו איתו לבלות, מגיעה [[סצנת קריוקי בלתי נשכחת|https://www.youtube.com/watch?v=BVGGG2J0_7M]]. עם השיר [[רכבת חצות לג'ורג'יה|https://www.youtube.com/watch?v=MDtAuLwa0ZE]] שהיה להיט ב-1973. זה קורה לקראת סוף העונה השישית, בה האוס, שהכניס עצמו לאשפוז גמילה ושוחרר ממנו, הולך ומשתפר וכך גם התסריט. [[זה|http://www.imdb.com/title/tt0412142/]] נהיה נעים ומצחיק יותר, [[13 הורסת|http://www.imdb.com/name/nm1312575/?ref_=tt_cl_t9]]. עוד לא סיימנו את עונה 6, כלומר יש  הסוף של 6 ועוד שתיים, אבל לפי [[הקליפ הזה|https://www.youtube.com/watch?v=O8pCxcUURaw]] - עוד קצת טוב ונשתגע.
+
+
+
+
+
+</pre>
 </div>
 <div created="20170320161241857" modified="20170729110111786" tags="HH [[שרלה לא הייתה אוהבת את זה]]" title="האחיות K">
 <pre>[img[pictures/SX0Kp0WyaOlQqidh.jpg]]
@@ -11374,14 +11393,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20171002200359738" modified="20171007191545156" tags="סדרות" title="האנטומיה של גריי">
+<div created="20171002200359738" modified="20180420221908730" tags="סדרות" title="האנטומיה של גריי">
 <pre>[img[pictures/greys-anatomy.jpg]]
 
 !!![[יויו]]:
 
 
-כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|http://www.imdb.com/character/ch0021688/?ref_=ttfc_fc_cl_t41]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
-[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|http://www.imdb.com/character/ch0021666/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|http://www.imdb.com/character/ch0021668/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 במשך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
+כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
+[[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 במשך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
 </div>
 <div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
@@ -11862,7 +11881,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 ה-K סיסטרס לא סובלות אותה.</pre>
 </div>
-<div created="20180315162507739" modified="20180316204556215" tags="[[אחות כהן]]" title="הצוות">
+<div created="20180315162507739" modified="20180430140219026" tags="[[אחות כהן]] [[נאמני הגנזך]] [[חיות אוכל]]" title="הצוות">
 <pre>[img[pictures/hazevet.jpg]]
 
 הצוות זה אנחנו המתגוררים [[בדירה|כוכב המשאלות 01]] מחודשת חוזה השכירות, כלומר [[יויו]], [[אירי]] [[וגורה|גורה]], שבשעות הפנאי שלנו  אופים, מבשלים וכותבים את המתכונים וגם.
@@ -12011,10 +12030,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 <div created="20180221193850741" modified="20180316181307672" tags="הצוות" title="חבל&quot;ז שוכ&quot;ו ק&quot;ר">
 <pre>[img[pictures/chavlaz.jpg]]</pre>
 </div>
-<div created="20180328131528706" modified="20180408104854498" tags="[[אחיות חוץ]] מוזיקה" title="חוה אלברשטיין">
+<div created="20180328131528706" modified="20180429134323226" tags="[[אחיות חוץ]] מוזיקה" title="חוה אלברשטיין">
 <pre>[img[pictures/chava-alberstein.jpg]]
 
-[[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%97%D7%95%D7%95%D7%94.bmp]] התמונה המקורית ממנה גורה ציירה את [[חוה|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%94_%D7%90%D7%9C%D7%91%D7%A8%D7%A9%D7%98%D7%99%D7%99%D7%9F]] שנולדה בשם אווה. היא [[שרה עם גיטרה.|https://www.youtube.com/watch?v=MqBu-lEPKWg]]: 
+[[זו|http://www.habama.co.il/Upload/MediaFiles/%D7%97%D7%95%D7%95%D7%94.bmp]] התמונה המקורית ממנה גורה ציירה את [[חוה|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%94_%D7%90%D7%9C%D7%91%D7%A8%D7%A9%D7%98%D7%99%D7%99%D7%9F]] שנולדה בשם אווה. היא [[שרה עם גיטרה|https://www.youtube.com/watch?v=MqBu-lEPKWg]]: 
 
 //האמנם האמנם
 
@@ -12902,6 +12921,50 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
 </div>
+<div created="20180416185136170" modified="20180429133023650" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]]" title="כמולונז">
+<pre>[img[pictures/cmolonez.jpg]]
+
+!!![[יויו]]:
+
+כמולונז נראה בדיוק כמו [[בולונז|https://he.wikipedia.org/wiki/%D7%A8%D7%95%D7%98%D7%91_%D7%91%D7%95%D7%9C%D7%95%D7%A0%D7%96]] אבל תרצה, שהיא מאד ספציפית, מכינה אותו עם [[סייטן|https://he.wikipedia.org/wiki/%D7%A1%D7%99%D7%99%D7%98%D7%9F]] קצוץ. בליל הסדר אכלנו את התבשיל מעל אטריות ביצים או אטריות שעועית. ברגיל אנחנו אוכלים את זה על ספגטי. 
+
+החומרים:
+
+*חצי ק&quot;ג סייטן קצוץ
+*שמן זית
+*2 שיני שום חתוכות קטן
+*בצל גדול חתוך לקוביות קטנות
+*פלפל חתוך לקוביות קטנות
+*20 עגבניות שרי תמר
+*שתי עגבניות ג'ני (אמיתי)
+*2 כוסות עגבניות מרוסקות מבקבוק
+*מלח ים גס
+*פלפל שחור
+*ארבעה עלי אורגנו
+*כוס- 2 כוסות מים 
+
+אופן ההכנה:
+
+1. מחממים בסיר רחב (הכי מתאים זה סיר מדגם סוטאז') ארבע כפות שמן זית ומזהיבים את השום
+
+2. מוסיפים את הפלפל החתוך וצולים אותו עד שהוא נהיה מעט שקוף
+
+3. מוסיפים את העגבניות וממשיכים בצליה, מוסיפים קורט מלח גס וממשיכים עוד כמה דקות. עד שמתאדים הנוזלים
+
+4. מוסיפים את הסייטן הקצוץ וצולים אותו כעשר דקות, מידי פעם מערבבים/הופכים בעזרת כף עץ
+
+5. יוצקים מעל חמש כפות שמן זית  וממשיכים לצלות עוד עשר דקות בערך. מידי פעם מערבבים
+
+6. מוסיפים את רסק העגבניות, המים, התבלינים ומערבבים
+
+7. מבשלים שעה בערך על אש קטנה ומכבים את האש
+
+הערה:
+
+לדעתי הטוב ביותר הוא אחרי שמכבים את האש והתבשיל &quot;נח&quot; זמן מה, טועמים, מתקנים תיבול אם צריך ומחממים שוב.
+
+</pre>
+</div>
 <div created="20170621135717036" modified="20180107124257583" tags="[[חיות אוכל]] [[מתכונים טבעוניים]]" title="כרובית במחבת">
 <pre>[img[pictures/kruvit-bamachvat.jpg]]
 
@@ -13122,6 +13185,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 וזו התמונה שמככבת באתר [[דובונאז' אלסטיק|http://coensisters.org/doobonage.html]].</pre>
 </div>
+<div created="20180416183422488" modified="20180416185038564" tags="[[משפחת באומן]] ארוחות [[נאמני הגנזך]]" title="ליל הסדר אצל אבא ותרצה">
+<pre>[img[pictures/lel-haseder-ezel-aba.jpg]]
+
+אלפרד נשאר לשמור על הבית. אנג'ליק, אירי, גורה ואני נסענו לשמח את ההורים. נהננו מהאביב היפה והרוח הנעימה. אבא בנה  צריף מאד יפה בחצר. כל המשפחה הגיעה כולל שני בניה של תרצה. היה הרבה מאד אוכל וללא ספק אפשר להגיד שכמות הטבעוניים הולכת וגדולה מה שגרם לתרצה להכין [[כמולונז]] אותו אימצנו.</pre>
+</div>
 <div created="20171219223133813" modified="20180318170818076" tags="[[מטא בדיון]] [[ילדים חד הוריים]] [[סיפורים אמיתיים]]" title="לילי">
 <pre>[img[pictures/lily.jpg]]
 
@@ -13242,6 +13310,23 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 סוף
 
 [img[pictures/lily-17-1.jpg]]
+</pre>
+</div>
+<div created="20180429132711538" modified="20180429133713356" tags="[[חיות אוכל]] [[מתכונים טבעוניים]]" title="למה הדבר דומה">
+<pre>[img[pictures/lema-hadavar-dome.jpg]]
+
+!!![[הצוות]]:
+
+יצר האדם קורניבורי מנעוריו. הוא אומנם גילה את האש והסכין, וניביו התקצרו, אך הוא סבל מצנע. הוא עשה עצמו מתעשת, והחליט לרחם על חיות הבר והבית, לפחות חלקים ממנו.
+
+ומה עם העצים? לא כואב להם? והעגבניות? אין להן דם? או לב? או עגבות?
+
+בגעגועיו חלם על [[תחליפים|https://www.youtube.com/watch?v=o8VObwbShjg]]: כמולונז, כמו שניצל, כמונלוני, צ'ילי כמו קארנה, חצילים בטעם כבד, קישואים בטעם כבד, המבורגר פטריות...
+
+ולפטריות? לא כואב?
+
+
+&lt;&lt;list-links filter:&quot;[tag[למה הדבר דומה]]&quot;&gt;&gt;
 </pre>
 </div>
 <div created="20170211163114823" modified="20170212133520340" title="לפתן חבושים">
@@ -14295,6 +14380,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
+<div created="20180502170412098" modified="20180502170537588" tags="[[משפחת באומן]] [[חיות אוכל]]" title="עוגיות שוקולד צ'יפס">
+<pre>
+[img[pictures/chocolate-chips.jpg]]</pre>
+</div>
 <div created="20170413101450070" modified="20170413112450089" tags="[[מתכוני ארוחת הכריסמס]]" title="עוגת מוקה">
 <pre>[img[pictures/ugat-moka.jpg]]
 
@@ -15141,7 +15230,7 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20180314180839992" modified="20180316102740248" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות" title="פטה טבעוני">
+<div created="20180314180839992" modified="20180429134207538" tags="[[מתכונים טבעוניים]] [[מתכוני ארוחת הכריסמס]] [[חיות אוכל]] הצוות [[למה הדבר דומה]]" title="פטה טבעוני">
 <pre>[img[pictures/vegan-pate.jpg]]
 
 
@@ -15348,6 +15437,62 @@ Fapina''
 
 </pre>
 </div>
+<div created="20180429154850092" modified="20180430140102406" tags="[[למה הדבר דומה]] [[מתכונים טבעוניים]] [[חיות אוכל]]" title="צ'ילי כמו קארנה">
+<pre>[img[pictures/chilli-cmo-karne.jpg]]
+
+!!![[הצוות]]:
+
+
+החומרים:
+
+*שמן תירס
+*שמן חריף
+*בצל גדול קצוץ לקוביות
+*שתי שיני שום קצוצות
+*פלפל אדום חתוך לקוביות קטנות
+*פלפל צהוב חתוך לקוביות
+*שני גזרים מגוררים
+*20 עגבניות שרי תמר חתוכות לפלחים
+*ארבע עגבניות בגודל בינוני מסוג טעים חתוכות לפלחים
+*חצי כוס שעועית חומה מבושלת עד רכות (משרים לפני לפחות 8 שעות)
+*חצי כוס שעועית שחורה מבושלת עד רכות (להשרות לפני לפחות שמונה שעות)
+*חצי קילוגרם כמו בשר טחון
+*שתי כוסות רסק עגבניות מבקבוק
+*כוס-שתי כוסות מים
+*פלפל שחור
+*מלח ים גס
+*כפית סוכר
+*צ'ילי טחון
+*שני עלי זעתר
+*צרור כוסברה קצוץ 
+
+אופן ההכנה:
+
+1. בסיר בקוטר 24 ס&quot;מ מחממים שתי כפות שמן תירס ושתי כפות שמן חריף וצולים את הבצל והשום עד הזהבה
+
+2. מוסיפים את הפלפלים וממשיכים לצלות עד הזהבה
+
+3. מוסיפים את הגזר המגורר וצולים
+
+4. מוסיפים את העגבניות החתוכות וממשיכים לצלות עד שנגמרים הנוזלים בסיר
+
+5. מוסיפים את הכמו בשר טחון וצולים כמה דקות תוך ערבוב בכף עץ
+
+6. מוסיפים את רסק העגבניות וכוס-שתי כוסות מים
+
+7. מערבבים ומוסיפים את התבלינים ומבשלים שעה על אש קטנה. מידי פעם מערבבים בעדינות
+
+8. מכבים את האש. נותנים לצ'ילי להתקרר, טועמים ומתקנים תיבול ומחממים שוב.
+
+9. מפזרים כוסברה קצוצה לפי הטעם ומגישים מעל אורז לבן
+
+
+
+
+
+
+</pre>
+</div>
 <div created="20170324140233570" modified="20170424214046263" tags="[[אחות כהן]]" title="צ'ן">
 <pre>[img[pictures/chan.jpg]]
 
@@ -15382,7 +15527,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170820183837636" modified="20170822191555848" tags="סולטנה" title="צזיקי">
+<div created="20170820183837636" modified="20180501164258218" tags="סולטנה [[חיות אוכל]]" title="צזיקי">
 <pre>[img[pictures/tzaziki.jpg]]
 
 !!![[סולטנה]]:
