--- a/index.html
+++ b/index.html
@@ -8933,7 +8933,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ליל הסדר אצל אבא ותרצה]] [[אבא יואל]] [[משפחת באומן]] [[עוגיות שוקולד צ'יפס]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="לילי [[לילי 17]] [[לילי 16]] [[לילי 15]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8953,7 +8953,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180502192530580" title="$:/temp/search">
+<div created="20161023184814872" modified="20180504111608250" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13290,10 +13290,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אדל תומפסון היא אישה מקסימה ונפלאה. היא קרמיקאית, והיא מכינה כלים מאד יפים ונעימים למגע ולאכילה.</pre>
 </div>
-<div created="20180302154738562" modified="20180314121400935" tags="לילי" title="לילי 15">
+<div created="20180302154738562" modified="20180504115200690" tags="לילי" title="לילי 15">
 <pre>[img[pictures/lily-15.jpg]]
 
-שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה הזוגית בסלון ביתנו, ואמרתי להם שכתוב [[באמנת זכויות הילד|https://he.wikipedia.org/wiki/%D7%90%D7%9E%D7%A0%D7%AA_%D7%96%D7%9B%D7%95%D7%99%D7%95%D7%AA_%D7%94%D7%99%D7%9C%D7%93]] שעליהם להקשיב לחוות דעתי.</pre>
+שבועיים אחרי הגיעו הורי הביולוגים לאיסלנד זועמים על אדל. סוקי החתול שלנו היה בהיכון על הפסנתר כשעצרתי אותם, ביקשתי מהם לשבת על הספה בסלון ביתנו, ואמרתי להם שכתוב [[באמנת זכויות הילד|https://he.wikipedia.org/wiki/%D7%90%D7%9E%D7%A0%D7%AA_%D7%96%D7%9B%D7%95%D7%99%D7%95%D7%AA_%D7%94%D7%99%D7%9C%D7%93]] שעליהם להקשיב לחוות דעתי.</pre>
 </div>
 <div created="20180304160006578" modified="20180306102621856" tags="לילי" title="לילי 16">
 <pre>[img[pictures/lily-16.jpg]]
