החלפת תמונה ותיקונים

--- a/index.html
+++ b/index.html
@@ -8933,7 +8933,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לילי [[לילי 17]] [[לילי 16]] [[לילי 15]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חשיפה לצפון]] הסופרנוס [[כריסטופר מולטיסנטי]] [[דם אמיתי]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8953,7 +8953,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20180504111608250" title="$:/temp/search">
+<div created="20161023184814872" modified="20180507142818220" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12188,14 +12188,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
 </div>
-<div created="20170711174005898" modified="20170817163146337" tags="סדרות [[אחיות חוץ]]" title="חשיפה לצפון">
+<div created="20170711174005898" modified="20180507145158478" tags="סדרות [[אחיות חוץ]]" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
 
 !!![[יויו]]:
 
 [[סיסלי|http://northernexposure.wikia.com/wiki/Cicely,_Alaska]] בשבילי היא [[בית שני|קופים ממונעים]], ואד, ג'ואל, הולינג, שלי, כריס, רות'-אן, מגי, מרילין וכל השאר -  הם גם - אחיות שלי
 
-[[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]</pre>
+[[its not the thing you fling, its the fling itself|https://www.youtube.com/watch?v=V6zmMWfzv38]]                          (אחד מקטעי הוידאו הבודדים שנשארו ביוטיוב)</pre>
 </div>
 <div created="20170922153729733" modified="20180130113644356" tags="הסופרנוס" title="טוני סופרנו">
 <pre>[img[pictures/tony-soprano.jpg]]
